# django-custom-user

./: README.md  pyproject.toml
custom_user_project/: db.sqlite3
custom_user_project/custom_user_project/: settings.py  urls.py
custom_user_project/templates/: base.html
custom_user_project/users/: admin.py  forms.py  models.py  tests.py
custom_user_project/users/migrations/: 0001_initial.py
