[tool.poetry]
name = "django-custom-user"
version = "0.1.0"
description = ""
authors = ["odai1990 <odai22odai78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Django = "^3.2.5"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
